[package]
name = "iot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
mongodb = "2.3.1"
serde = "1.0.152"