[package]
name = "iot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = "1.0.152"
dotenv = "0.15.0"
rand = "0.8.5"
tower-http = { version = "0.4.0", features = ["cors"] }

[dependencies.mongodb]
version = "2.3.1"
